--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.5.6",
+    "@pinia/nuxt": "^0.5.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.453.0",
     "nuxt": "^3.13.2",
+    "pinia": "^2.2.4",
     "radix-vue": "^1.9.7",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.5.4",
@@ -25,5 +27,8 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
     "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
